margin fix for latest_tool alignement

--- a/cfg/themes/roar/static/roar_template/Styles/summary.css
+++ b/cfg/themes/roar/static/roar_template/Styles/summary.css
@@ -159,7 +159,7 @@ padding-left: 10px;
 	float: right;
 }
 
-.panel-body i, .ep_doc_icon {
+.panel-body i, .panel-body .ep_doc_icon {
 //float: right;
 margin-left: 25%;
 }
